# hq

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
docs/: hq.1
scripts/: fetch_lib_CLI11.sh  fetch_lib_nlohmann_json.sh
src/: config.cpp  file.cpp  formatter.hpp  main.cpp
src/lib/lexbor/: CSSParser.cpp  HTMLParser.cpp  Selectors.cpp
test_files/: bbc_news.html  test1.html  text1.html
